--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
 <body>
 <div class="container">
     <br />
-    <h2 class="text-center">EN- Spotify Playlists</h2>
+    <h2 class="text-center">EN- Spotify Playlists final</h2>
     <p class="text-center text-muted font-italic">focused playlists, curated playlists from fanbases and some made by engenes.<br/>Updated: 06/01/2022</p>
 
     <!-- EXAMPLE TEMPLATE -->
