--- a/index.htm
+++ b/index.htm
@@ -52,6 +52,12 @@
     <a href="https://open.spotify.com/playlist/6ZiZxoDsW4IeR7SeTpZ3Cp" target="_blank">Always Pola Love (2 HRS)</a><br />
     <a href="https://open.spotify.com/playlist/18tEC7WGxFqkaw4w9kyZpv" target="_blank">PolaLove DASH! (2 HR)</a><br />
     <a href="https://open.spotify.com/playlist/1oTuRirbccj6wKc9ts22Bp" target="_blank">ALWAYS with ENHYPEN (3 HR)</a><br />
+    <a href="https://open.spotify.com/playlist/21X2clJNr3n9iFDKbA1Vrb" target="_blank">Polaroid Love focus playlist (5)</a><br />
+    <a href="https://open.spotify.com/playlist/0ZEyRDO5Yxiu5mIT6cCcgR" target="_blank">Polaroid Love focus playlist (1)</a><br />
+    <a href="https://open.spotify.com/playlist/3Gu72lZxkBqXy2dOGb39Ne" target="_blank">Polaroid Love focus playlist (7)</a><br />
+    <a href="https://open.spotify.com/playlist/7u8q2s46hs1FEUR1Q2exvE" target="_blank">DRUNK-DAZED Polaroid (3HR)</a><br />
+    <a href="https://open.spotify.com/playlist/6n7OCp8qKyvB4LVnPtMayN" target="_blank">GIVEN-TAKEN Polaroid (3HR)</a><br />
+    <a href="https://open.spotify.com/playlist/0FgelSM7oC39cEXJm3SOwA" class="text-success" target="_blank">tamed-dashed jpn version</a><br />
     
 
 
