--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
 <div class="container">
     <br />
     <h2 class="text-center">EN- Spotify Playlists</h2>
-    <p class="text-center text-muted font-italic">focused playlists, curated playlists from fanbases and some made by engenes.<br/>Updated: 06/01/2022</p>
+    <p class="text-center text-muted font-italic">focused playlists, curated playlists from fanbases and some made by engenes.<br/>Updated: 06/16/2022</p>
 
     <!-- EXAMPLE TEMPLATE -->
     <!-- New Section -->
@@ -42,9 +42,9 @@
     <a href="https://open.spotify.com/playlist/1bBH4agUXNNX1NYkwkh8PY" target="_blank">TAMED-DASHED JPN + SENKOU FOCUSED (3 HR)</a><br />
     <a href="https://open.spotify.com/playlist/5kYUwCnIpqTDeNpFLdUCGx" target="_blank">ENHYPEN ROAD TO 1 BILLION</a><br />
     <a href="https://open.spotify.com/playlist/7BvZziFxB8wkAKGbmebQOy" target="_blank">ENHYPEN's ANSWER!</a><br />
-    <a href="https://open.spotify.com/playlist/0dmntr3N0lw5KTTAqj7B5c" target="_blank">GIVEN-TAKEN to 100M</a><br />
+    <a href="https://open.spotify.com/playlist/0dmntr3N0lw5KTTAqj7B5c" target="_blank">GIVEN-TAKEN to 100M (PART_I)</a><br />
     <a href="https://open.spotify.com/playlist/4g9J3ogIL8gJPaol4ChoUY" class="text-success" target="_blank">ALWAYS X POLAROID LOVE #1</a><br />
-    <a href="https://open.spotify.com/playlist/0rIXvp3G2tFgipdBRu0o4U" class="text-success" target="_blank">ENHYPEN Fresh ( Always focused + Polaroid Love )</a><br />
+    <a href="https://open.spotify.com/playlist/0rIXvp3G2tFgipdBRu0o4U" class="text-success" target="_blank">ENHYPEN Fresh *Dynamic Playlist</a><br />
     <a href="https://open.spotify.com/playlist/71jHpdRCpKSqdQ8OPcNA52" target="_blank">A Polaroid Focus (3 HR)</a><br />
     <a href="https://open.spotify.com/playlist/5KGFCXialkBVLzz0NpxUvV" class="text-success" target="_blank">POLAROID LOVE FOCUSED PLAYLIST</a><br />
     <a href="https://open.spotify.com/playlist/3cx5oTnJdqFXUC8mQ3OEMX" target="_blank">PolaLove RISE! (2 HR)</a><br />
@@ -120,6 +120,9 @@
     <a href="https://open.spotify.com/playlist/4JMkQCHfh34Vn0Je0FwD7C" target="_blank">#StreamDilemma</a><br />
     <a href="https://open.spotify.com/playlist/2eaKlYL49fRPcWkaPlavO2" target="_blank">HOONKI STREAMING PARTY</a><br />
     <a href="https://open.spotify.com/playlist/5wxRnV8CpDHxncVAeVaR2A" target="_blank">Drunk-Dazed FEVER</a><br />
+    <a href="https://open.spotify.com/playlist/43UhPI81LMr6s4ZILlNZ3g" target="_blank">Given-Taken TO 100M</a><br />
+    <a href="https://open.spotify.com/playlist/1lubKTgEyz9erZW1Gx4Jq1" target="_blank">ENHYPEN's Kind of Magic</a><br />
+    <a href="https://open.spotify.com/playlist/4GiQcCyWgL9SfrGKHkIPh0" target="_blank">Polaroid Love TO 100M</a><br />
 
 
     <!-- Profiles -->
