--- a/index.htm
+++ b/index.htm
@@ -27,6 +27,11 @@
     <!-- <h4><i class="bi bi-music-note-beamed"></i> Section Name</h4> -->
     <!-- <a href="#" target="_blank">Playlist</a><br /> -->
 
+    <!-- MANIFESTO : DAY 1 -->
+    <br />
+    <h4><i class="bi bi-music-note-beamed"></i> MANIFESTO : DAY 1 Playlists</h4>
+    <a href="#" target="_blank">Playlist 1</a><br />
+
     <!-- New Section -->
     <br />
     <h4><i class="bi bi-music-note-beamed"></i> Overnight Playlists</h4>
