--- a/index.htm
+++ b/index.htm
@@ -29,7 +29,7 @@
 
     <!-- MANIFESTO : DAY 1 -->
     <br />
-    <h4><i class="bi bi-music-note-beamed"></i> MANIFESTO : DAY 1 Playlists</h4>
+    <h4><i class="bi bi-music-note-beamed"></i> MANIFESTO : DAY 1</h4>
     <a href="#" target="_blank">Playlist 1</a><br />
 
     <!-- New Section -->
