--- a/index.htm
+++ b/index.htm
@@ -20,6 +20,7 @@
     <br />
     <h2 class="text-center">EN- Spotify Playlists</h2>
     <p class="text-center text-muted font-italic">focused playlists, curated playlists from fanbases and some made by engenes.<br/>Updated: 06/16/2022</p>
+    <center><a href="#profiles">Jump to Profiles</a></center>
 
     <!-- EXAMPLE TEMPLATE -->
     <!-- New Section -->
@@ -132,6 +133,7 @@
 
     <!-- Profiles -->
     <br /><br />
+  <section id="profiles">
     <p class="text-center">EN- Fanbases Spotify Profiles:</p>
     <center>
       <a href="https://open.spotify.com/user/nmfruj8v82b01hv6mm5rab9en" target="_blank">@ENHYPENonSpotify</a> | 
@@ -139,6 +141,7 @@
       <a href="https://open.spotify.com/user/qr18gzspyr4b1ty4o0br49j9n" target="_blank">ENHYPENinUSA</a>
       <p>Legend: <span class="text-success">Made by an Engene</span></p>
     </center>
+  </section>
 </div>
 <br /><br /><br />
     <!-- Scripts -->
