--- a/index.htm
+++ b/index.htm
@@ -41,6 +41,7 @@
     <a href="https://open.spotify.com/playlist/2muB7QgVrACT5yPmrnRy37" target="_blank">PolaLove OVERNIGHT</a><br />
     <a href="https://open.spotify.com/playlist/4xYnfJi5T8ax740UAvupMu" class="text-success" target="_blank">PL-BC focus *Overnight</a><br />
     <a href="https://open.spotify.com/playlist/2S0SRpdrRWNYsmIvVgI652" class="text-success" target="_blank">ENHYPEN FOCUS (SLEEPING PLAYLIST) *Overnight</a><br />
+    <a href="https://open.spotify.com/playlist/2oo7ahC6n0u9faifjBotcs" target="_blank">OVERNIGHT pre-Manifesto (7 HRS)</a><br />
 
     <!-- Focused Playlists Section -->
     <br />
